# kubeflow_practice

./: README.md  hell_pipeline.yaml  pyproject.toml
docs/: InstallLocally.md  README.md
src/: compile.py  helloworld.py
