[tool.poetry]
name = "kubeflow_practice"
version = "0.1.0"
description = ""
authors = ["yashikab <yashikaba@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kfp = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
